--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: alice
 description: Alice is an HTTP Inspector tool which helps debugging http requests. It catches and stores http requests and responses, which can be viewed via simple UI.
 version: 0.3.2
-#author: Jakub Homlala <jhomlala@gmail.com>
-homepage: https://github.com/jhomlala/alice
+homepage: https://github.com/abdur-rohman/alice_lite
 
 environment:
   sdk: ">=2.18.0 <3.0.0"
@@ -16,15 +15,11 @@ dependencies:
   flutter_local_notifications: ^12.0.3
   rxdart: ^0.27.5
 
-  path_provider: ^2.0.11
   permission_handler: ^10.2.0
   package_info_plus: ^3.0.1
-  open_filex: ^4.2.2
-  sensors_plus: ^2.0.1
   share_plus: ^6.1.0
   chopper: ^5.1.0
   collection: ^1.16.0
-  url_launcher: ^6.1.6
 
 dev_dependencies:
   lint: ^1.10.0
